menu z-index fix

--- a/scss/main.css
+++ b/scss/main.css
@@ -264,6 +264,7 @@ html {
   border-radius: 5% 0 0 5%;
   border-left: 2px solid #970303;
   opacity: 0;
+  z-index: 500;
 }
 @media only screen and (max-width: 800px) {
   .sidebar__open {
